Fixed an interesting behavior of twinline-elements,  which title difference caused a general wrap widths difference

--- a/src/components/title-bar/title-bar.scss
+++ b/src/components/title-bar/title-bar.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   text-transform: uppercase;
+  min-width: 150px;
   
   &__state {
     font-weight: normal;
